package ch.supsi.monopoly.board.interfaces;

import ch.supsi.monopoly.Player;

public interface Jailable {
    void sendToJail(Player player);
}
